--- a/navigation/index.html
+++ b/navigation/index.html
@@ -16,12 +16,26 @@
       <h1>Your Name</h1>
       <nav>
         <ul id="menu">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
+    <main>
+      <section id="home">
+        <!-- All the HOme section can be placed here. -->
+      </section>
+      <section id="about">
+        <!-- All the HOme section can be placed here. -->
+      </section>
+      <section id="portfolio">
+        <!-- All the HOme section can be placed here. -->
+      </section>
+      <section id="contact">
+        <!-- All the HOme section can be placed here. -->
+      </section>
+    </main>
   </body>
 </html>
